# 21-2

./: .flake8  .gitignore  catalog.html  contacts.html  glavnaya.html  pyproject.toml
html/: catalog.html  category_first.html  contacts.html
src/: config.py  main.py
style_bootstrap/: main.css
