[tool.poetry]
name = "homework21-2-html"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.2"
mypy = "^1.15.0"
isort = "^6.0.1"
black = "^25.1.0"
requests = "^2.32.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
